--- a/src/app/modules/home-page/home-page.component.scss
+++ b/src/app/modules/home-page/home-page.component.scss
@@ -41,6 +41,9 @@ h2 {
 
 .sub_news {
   margin-top: 5%;
+  img{
+    height: 100px;
+  }
   a {
     text-decoration: none;
   }
@@ -120,6 +123,9 @@ h2 {
 
   .example-card{
     margin-bottom: 5%;
+    img {
+      height: 150px;
+    }
   }
 }
 
