--- a/src/app/modules/details/details.component.html
+++ b/src/app/modules/details/details.component.html
@@ -10,7 +10,7 @@
               {{item.description}}
             </p>
           </mat-card-content>
-          <div class="content_box" [innerHTML]="data">
+          <div class="content_box" [innerHTML]="item.content">
 
           </div>
         </mat-card>
