--- a/src/app/modules/add-post/add-post.component.html
+++ b/src/app/modules/add-post/add-post.component.html
@@ -8,32 +8,52 @@
         (ngSubmit)="submitForm()">
         <div class="row">
 
-          <div class="col-lg-3">
+          <div class="col-lg-3 col-md-6 col-sm-12">
             <h3>عکس موضوع را انتخاب کنید</h3>
-            <input type='file' name="image" (change)="uploadFile($event)"/>
+            <input type='file' name="image" (change)="uploadFile($event, 'first')"/>
           </div>
-          <div class="col-lg-9"></div><br>
+          <div class="col-lg-9 col-md-6"></div><br>
 
-          <div class="col-lg-4 image_pre" *ngIf="imageSrc != ''">
+          <div class="col-lg-4 col-md-12 col-sm-12 image_pre" *ngIf="imageSrc != ''">
             <p style="text-align: right;">
               <img [src]="imageSrc" *ngIf="imageSrc != '' "/>
             </p>
           </div>
-          <div class="col-lg-9"></div><br>
+          <div class="col-lg-8"></div><br>
 
-          <div class="col-lg-4">
+          <div class="col-lg-9 col-md-12 col-sm-12">
+            <br>
             <h3>عنوان پست را انتخاب کنید</h3>
             <input type="text" name="title" formControlName="title">
           </div>
-          <div class="col-lg-9"></div><br>
 
-          <div class="col-lg-9">
+          <div class="col-lg-12 col-md-12 col-sm-12">
+            <br>
             <h3>خلاصه ای از پست را وارد نمایید</h3>
             <textarea name="description" formControlName="description" cols="30" rows="5" style="width: 100%;"></textarea>
           </div>
 
+          <!-- ====================================================================  -->
+
+          <div class="col-lg-12 col-md-12 col-sm-12 col-12" *ngIf="postType == 'article' || isEdit || Type == 'analysis'">
+            <mat-divider style="margin: 5% 0 5% 0;border-top: 1px solid rgb(190, 190, 190);"></mat-divider>
+          </div>
+
+          <div class="col-lg-3 col-md-6 col-sm-12" *ngIf="postType == 'article' || isEdit || Type == 'analysis'">
+            <h3>عکس دوم را انتخاب کنید</h3>
+            <input type='file' name="image" (change)="uploadFile($event, 'second')"/>
+          </div>
+          <div class="col-lg-9 col-md-6" *ngIf="postType == 'article' || isEdit || Type == 'analysis'"></div><br>
+
+          <div class="col-lg-4 image_pre" *ngIf="imageSrc2 != ''">
+            <p style="text-align: right;">
+              <img [src]="imageSrc2" *ngIf="imageSrc2 != '' "/>
+            </p>
+          </div>
+          <div class="col-lg-9" *ngIf="postType == 'article' || isEdit || Type == 'analysis'"></div><br>
+
           <div class="col-lg-12" *ngIf="postType == 'article' || Type == 'analysis' || isEdit">
-            <h2>پست خود را ایجاد نمایید</h2>
+            <h2>قسمت اول پست را وارد کنید</h2>
             <div class="editor_box">
               <ckeditor
                 *ngIf="postType == 'article' || isEdit || Type == 'analysis'"
@@ -45,17 +65,51 @@
             </div>
           </div>
 
-          <div class="col-lg-3" *ngIf="postType == 'film'">
-            <div class="video_input">
-              <h3>ویدئو خود را انتخاب نمایید</h3>
-              <input type='file' name="video" (change)="readFile($event, 'video');" />
+          <!-- ======================================================================  -->
+
+          <div class="col-lg-12 col-md-12 col-sm-12 col-12" *ngIf="postType == 'article' || isEdit || Type == 'analysis'">
+            <mat-divider style="margin: 5% 0 5% 0;border-top: 1px solid rgb(190, 190, 190);"></mat-divider>
+          </div>
+
+          <div class="col-lg-3 col-md-6 col-sm-12" *ngIf="postType == 'article' || isEdit || Type == 'analysis'">
+            <h3>عکس سوم را انتخاب کنید</h3>
+            <input type='file' name="image" (change)="uploadFile($event, 'third')"/>
+          </div>
+          <div class="col-lg-9 col-md-6" *ngIf="postType == 'article' || isEdit || Type == 'analysis'"></div><br>
+
+          <div class="col-lg-4 image_pre" *ngIf="imageSrc3 != ''">
+            <p style="text-align: right;">
+              <img [src]="imageSrc3" *ngIf="imageSrc3 != '' "/>
+            </p>
+          </div>
+          <div class="col-lg-9" *ngIf="postType == 'article' || isEdit || Type == 'analysis'"></div><br>
+
+          <div class="col-lg-12" *ngIf="postType == 'article' || Type == 'analysis' || isEdit">
+            <h2>قسمت دوم پست را وارد کنید</h2>
+            <div class="editor_box">
+              <ckeditor
+                *ngIf="postType == 'article' || isEdit || Type == 'analysis'"
+                [config]="editorConfig"
+                [editor]="Editor"
+                (ready)="onReady($event)"
+                formControlName="content1"
+                ></ckeditor>
             </div>
           </div>
 
-          <div class="col-lg-3" *ngIf="postType == 'file'">
+          <!-- ======================================================================  -->
+
+          <div class="col-lg-3 col-md-6 col-sm-12" *ngIf="postType == 'film'">
+            <div class="video_input">
+              <h3>ویدئو خود را انتخاب نمایید</h3>
+              <input type='file' name="video" formControlName="video" (change)="readFile($event, 'video');" />
+            </div>
+          </div>
+
+          <div class="col-lg-3 col-md-6 col-sm-12" *ngIf="postType == 'file'">
             <div class="video_input">
               <h3>فایل خود را انتخاب نمایید</h3>
-              <input type='file' name="file" (change)="readFile($event, 'file');" />
+              <input type='file' name="file" formControlName="file" (change)="readFile($event, 'file');" />
             </div>
           </div>
 
