--- a/src/app/modules/details/details.component.scss
+++ b/src/app/modules/details/details.component.scss
@@ -8,6 +8,12 @@ h1{
   font-family: "BKoodakBold";
 }
 
+.sticky-top h1 {
+  font-size: 20px;
+  text-align: right;
+  font-family: "BKoodakBold";
+}
+
 .container {
   margin-top: 0%;
   .row {
@@ -125,10 +131,6 @@ h1{
     box-shadow: 5px 10px 18px #b9b8b8;
     height: 360px;
     background-color: white;
-    mat-divider{
-      width: 90%;
-      margin-right: 5%;
-    }
     mat-list-item {
       height: 70px;
       a {
