--- a/src/app/modules/learn/learn.component.html
+++ b/src/app/modules/learn/learn.component.html
@@ -1,37 +1,37 @@
 <div class="container">
   <div class="row" dir="rtl">
-    <div class="col-lg-8 content_box">
+    <div class="col-lg-8 content_box" *ngFor="let item of Post">
       <div>
         <mat-card class="main-news">
-          <h1>عنوان خبر</h1>
-          <div class="sub_title">
-            <p>نویسنده</p>
-            <p>تاریخ</p>
-            <p>امتیاز</p>
-          </div>
-          <img src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
+          <h1>{{item.title}}</h1>
+          <img src="{{item.image}}" alt="{{item.title}}">
           <mat-card-content>
             <p>
-              The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from Japan.
-              A small, agile dog that copes very well with mountainous terrain, the Shiba Inu was originally
-              bred for hunting
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis quidem unde inventore soluta ab temporibus odit veniam, rerum dolorem voluptates dolores dolorum culpa magnam delectus vero ipsa officia necessitatibus molestias.
+              {{item.description}}
             </p>
           </mat-card-content>
           <div *ngIf="isFilm">
             <iframe [src]="getEmbedUrl()" frameborder="0" allowfullscreen></iframe>
           </div>
-          <div *ngIf="isArticle">
-            <img src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
+        </mat-card>
+        <div>
+          <mat-card class="main-news">
+            <img src="{{item.image1}}" alt="{{item.title}}">
             <mat-card-content>
-              <p>
-                The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from Japan.
-                A small, agile dog that copes very well with mountainous terrain, the Shiba Inu was originally
-                bred for hunting.
+              <p [innerHTML]="item.content">
               </p>
             </mat-card-content>
-          </div>
-        </mat-card>
+          </mat-card>
+        </div>
+        <div>
+          <mat-card class="main-news">
+            <img src="{{item.image2}}" alt="{{item.title}}">
+            <mat-card-content>
+              <p [innerHTML]="item.content1">
+              </p>
+            </mat-card-content>
+          </mat-card>
+        </div>
       </div>
     </div>
 
@@ -44,25 +44,17 @@
               مطالب مرتبط
             </h1>
           </div>
-          <div class="col-lg-12 col-md-6 col-sm-6 col-12">
-            <mat-card class="example-card">
-              <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
-              <mat-card-content>
-                <p>
-                  The Shiba Inu is the smallest of the six original and
-                </p>
-              </mat-card-content>
-            </mat-card>
-          </div>
-          <div class="col-lg-12 col-md-6 col-sm-6 col-12">
-            <mat-card class="example-card">
-              <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
-              <mat-card-content>
-                <p>
-                  The Shiba Inu is the smallest of the six original and
-                </p>
-              </mat-card-content>
-            </mat-card>
+          <div class="col-lg-12 col-md-6 col-sm-6 col-12" *ngFor="let item of otherPost">
+            <a href="/learn/article/{{item.id}}">
+              <mat-card class="example-card">
+                <img mat-card-image src="{{item.image}}" alt="{{item.title}}">
+                <mat-card-content>
+                  <p>
+                    {{item.title}}
+                  </p>
+                </mat-card-content>
+              </mat-card>
+            </a>
           </div>
         </div>
       </div>
@@ -103,38 +95,15 @@
       <div class="sticky-top">
         <h1>
           <img src="../../../assets/article_icon.png" alt="">
-          اخبار
+          آموزش ها
         </h1>
 
         <mat-list role="list">
-          <mat-list-item role="listitem">
-            <a href="/learn/article/id">
-              sdkjsjd
+          <mat-list-item role="listitem" *ngFor="let item of otherPostList">
+            <a href="/learn/article/{{item.id}}">
+              {{item.title}}
             </a>
-          </mat-list-item>
-          <mat-divider></mat-divider>
-          <mat-list-item role="listitem">
-            <a href="/learn/article/id">
-              Itdfgsd sdfg sddg sgsdfbem jkkj kj kj kj kj kj kj jk 2
-            </a>
-          </mat-list-item>
-          <mat-divider></mat-divider>
-          <mat-list-item role="listitem">
-            <a href="/learn/article/id">
-              Item 3
-            </a>
-          </mat-list-item>
-          <mat-divider></mat-divider>
-          <mat-list-item role="listitem">
-            <a href="/learn/article/id">
-              Item 3
-            </a>
-          </mat-list-item>
-          <mat-divider></mat-divider>
-          <mat-list-item role="listitem">
-            <a href="/learn/article/id">
-              Item 3
-            </a>
+            <mat-divider style="width: 90%;margin-left: 5%;"></mat-divider>
           </mat-list-item>
         </mat-list>
       </div>
