--- a/src/app/modules/learn/learn.component.scss
+++ b/src/app/modules/learn/learn.component.scss
@@ -8,6 +8,12 @@ h1{
   font-family: "BKoodakBold";
 }
 
+.sticky-top h1 {
+  font-size: 20px;
+  text-align: right;
+  font-family: "BKoodakBold";
+}
+
 .container {
   margin-top: 0%;
   .row {
@@ -94,9 +100,14 @@ h1{
   .opinion_card{
     padding-bottom: 4%;
   }
-  h1 img {
-    width: 40px;
-    height: 40px;
+  h1 {
+    font-size: 20px;
+    text-align: right;
+    font-family: "BKoodakBold";
+    img {
+      width: 40px;
+      height: 40px;
+    }
   }
   .example-form {
     width: 100%;
