--- a/src/app/modules/news/news.component.html
+++ b/src/app/modules/news/news.component.html
@@ -271,52 +271,13 @@
     <div class="col-lg-12 title">
       <h1>هاعنوان مجموعه خبر</h1>
     </div>
-    <div class="col-lg-3 col-md-6 col-sm-6 col-12">
-      <a href="/news/id">
+    <div class="col-lg-3 col-md-6 col-sm-6 col-12" *ngFor="let item of newsData">
+      <a href="/news/article/{{item.id}}">
         <mat-card class="example-card">
-          <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
+          <img mat-card-image src="{{item.image}}" alt="{{item.title}}">
           <mat-card-content>
             <a class="little_desc">
-              The Shiba Inu is the smallest of the six original and
-            </a>
-          </mat-card-content>
-        </mat-card>
-      </a>
-    </div>
-
-    <div class="col-lg-3 col-md-6 col-sm-6 col-12">
-      <a href="/news/id">
-        <mat-card class="example-card">
-          <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
-          <mat-card-content>
-            <a class="little_desc">
-              The Shiba Inu is the smallest of the six original and
-            </a>
-          </mat-card-content>
-        </mat-card>
-      </a>
-    </div>
-
-    <div class="col-lg-3 col-md-6 col-sm-6 col-12">
-      <a href="/news/id">
-        <mat-card class="example-card">
-          <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
-          <mat-card-content>
-            <a class="little_desc">
-              The Shiba Inu is the smallest of the six original and
-            </a>
-          </mat-card-content>
-        </mat-card>
-      </a>
-    </div>
-
-    <div class="col-lg-3 col-md-6 col-sm-6 col-12">
-      <a href="/news/id">
-        <mat-card class="example-card">
-          <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
-          <mat-card-content>
-            <a class="little_desc">
-              The Shiba Inu is the smallest of the six original and
+              {{item.title}}
             </a>
           </mat-card-content>
         </mat-card>
