--- a/src/app/modules/list-items/list-items.component.html
+++ b/src/app/modules/list-items/list-items.component.html
@@ -7,7 +7,7 @@
     </div>
     <div class="col-lg-3 col-md-6 col-sm-6 col-12" *ngFor="let item of editData">
       <mat-card class="example-card">
-        <a href="/learn/article/{{item.id}}">
+        <a href="/{{Type}}/article/{{item.id}}">
           <img mat-card-image [src]="item.image" alt="Photo of a Shiba Inu">
         </a>
         <mat-card-content>
