uncommenting about us

--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -92,15 +92,15 @@
               </button>
             </a>
           </li>
-          <!-- <li>
-            <a href="/about-us" style="color:white;text-decoration:none;">
+          <li>
+            <a href="" style="color:white;text-decoration:none;">
               <button mat-button class="nav_items">
                 <span>
                   درباره ما
                 </span>
               </button>
             </a>
-          </li> -->
+          </li>
           <li>
             <a href="/contact" style="color:white;text-decoration:none;">
               <button mat-button class="nav_items">
@@ -167,13 +167,13 @@
                   </span>
                 </button>
               </a>
-              <!-- <a href="/about-us" style="color:black;text-decoration:none;">
+              <a href="" style="color:black;text-decoration:none;">
                 <button mat-menu-item>
                   <span>
                     درباره ما
                   </span>
                 </button>
-              </a> -->
+              </a>
               <a href="/contact" style="color:black;text-decoration:none;">
                 <button mat-menu-item>
                   <span>
