adding error handler to the login component

--- a/src/app/shared/components/login/login.component.html
+++ b/src/app/shared/components/login/login.component.html
@@ -31,6 +31,9 @@
             <div class="col-lg-6 col-md-6 col-sm-6 col-6 form_capImage">
               <img src="data:image/png;base64,{{captcha_image}}" alt="">
             </div>
+            <div class="col-lg-12">
+              <p style="text-align:right;color: red;">{{captchaError}}</p>
+            </div>
           </div>
         </mat-dialog-content>
       </div>
