adding user section to sidebar

--- a/src/app/shared/components/sidebar/sidebar.component.html
+++ b/src/app/shared/components/sidebar/sidebar.component.html
@@ -11,6 +11,14 @@
   </mat-accordion>
 
   <mat-accordion>
+    <a href="/admin/users">
+      <button mat-button class="dashboard">
+        اعضای سایت
+      </button>
+    </a>
+  </mat-accordion>
+
+  <mat-accordion>
     <mat-expansion-panel>
       <mat-expansion-panel-header>
         <mat-panel-title>
