--- a/src/app/modules/table-page/table-page.component.html
+++ b/src/app/modules/table-page/table-page.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container" *ngIf="!isUserList">
   <div class="row">
     <div class="col-lg-12">
       <mat-form-field>
@@ -38,3 +38,40 @@
     </div>
   </div>
 </div>
+
+
+<div class="container" *ngIf="isUserList">
+  <div class="row">
+    <div class="col-lg-12">
+      <mat-form-field>
+        <mat-label>Filter</mat-label>
+        <input matInput (keyup)="applyFilter($event)" placeholder="Ex. ium">
+      </mat-form-field>
+
+      <table mat-table [dataSource]="userSource" class="mat-elevation-z8">
+
+        <!-- Position Column -->
+        <ng-container matColumnDef="id">
+          <th mat-header-cell *matHeaderCellDef> ردیف </th>
+          <td mat-cell *matCellDef="let element"> {{element.id}} </td>
+        </ng-container>
+
+        <!-- Name Column -->
+        <ng-container matColumnDef="username">
+          <th mat-header-cell *matHeaderCellDef> نام کاربری </th>
+          <td mat-cell *matCellDef="let element"> {{element.username}} </td>
+        </ng-container>
+
+        <!-- Weight Column -->
+        <ng-container matColumnDef="mobile">
+          <th mat-header-cell *matHeaderCellDef> موبایل </th>
+          <td mat-cell *matCellDef="let element"> {{element.mobile}} </td>
+        </ng-container>
+
+        <tr mat-header-row *matHeaderRowDef="userColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: userColumns;"></tr>
+      </table>
+    </div>
+  </div>
+</div>
+
