--- a/src/app/modules/register/register.component.html
+++ b/src/app/modules/register/register.component.html
@@ -19,6 +19,10 @@
               </mat-form-field>
             </div>
 
+            <div class="col-lg-12 col-md-12 col-sm-12 col-12 error_message" *ngIf="mobileError != ''">
+              <p>{{mobileError}}</p>
+            </div>
+
             <br>
 
             <div class="col-lg-12 col-md-12 col-sm-12 col-12">
@@ -28,11 +32,19 @@
               </mat-form-field>
             </div>
 
+            <div class="col-lg-12 col-md-12 col-sm-12 col-12 error_message" *ngIf="passwordError != ''">
+              <p>{{passwordError}}</p>
+            </div>
+
             <div class="col-lg-12 col-md-12 col-sm-12 col-12">
               <mat-form-field class="example-full-width">
                 <mat-label>تکرار پسورد</mat-label>
                 <input matInput type="password" [(ngModel)]="conf_password" name="confirm" placeholder="پسورد خود را تکرار کنید">
               </mat-form-field>
+            </div>
+
+            <div class="col-lg-12 col-md-12 col-sm-12 col-12 error_message" *ngIf="confPasswordError != ''">
+              <p>{{confPasswordError}}</p>
             </div>
 
             <div class="col-lg-6 col-md-6 col-sm-6 col-6">
@@ -46,6 +58,10 @@
               <div class="captcha_image">
                 <img style="border: 1px solid black;" src="data:image/png;base64,{{captcha_image}}" alt="">
               </div>
+            </div>
+
+            <div class="col-lg-12 col-md-12 col-sm-12 col-12 error_message" *ngIf="captchaError != ''">
+              <p>{{captchaError}}</p>
             </div>
 
             <div class="col-lg-12 col-md-12 col-sm-12 col-12">
