--- a/src/app/modules/home-page/home-page.component.scss
+++ b/src/app/modules/home-page/home-page.component.scss
@@ -1,3 +1,13 @@
+h1,h2,h3,h4,h5 {
+  text-align: right;
+  font-family: "BKoodakBold";
+}
+
+a,p {
+  text-align: right;
+  font-family: "BKoodakBold";
+}
+
 h1{
   text-align: right;
   font-family: "BKoodakBold";
@@ -6,6 +16,10 @@ h1{
     width: 40px;
     height: 40px;
   }
+}
+
+a {
+  font-family: "BKoodakBold";
 }
 
 h2 {
@@ -18,13 +32,29 @@ h2 {
   margin-top: 5%;
 }
 
+// =============================================================================
+// main news
+// =============================================================================
+
 .main_news{
+  a {
+    text-decoration: none;
+  }
   h1 a {
     margin-right: 70%;
     font-size: 20px;
   }
   .main-news {
     width: 100%;
+    p {
+      font-family: "BKoodakBold";
+      text-align: right;
+      padding-top: 2%;
+    }
+
+    p:hover {
+      color: rgb(5, 128, 199);
+    }
   }
   .main-news img {
     width: 100%;
@@ -32,12 +62,20 @@ h2 {
   }
 }
 
+// ===============================================================================
+// table css
+// ===============================================================================
+
 .data_table {
   table {
     width: 100%;
     text-align: right;
   }
 }
+
+// =======================================================================
+// sub news
+// =======================================================================
 
 .sub_news {
   margin-top: 5%;
@@ -53,16 +91,69 @@ h2 {
       color: rgb(5, 128, 199);
     }
   }
+
+  p {
+    font-family: "BKoodakBold";
+    text-align: right;
+  }
+
+  p:hover {
+    color: rgb(5, 128, 199);
+  }
 }
+
+// ==================================================================================
+// analysis
+// ==================================================================================
+
+.analysis{
+  h1 a{
+    margin-right: 77%;
+    font-size: 20px;
+  }
+
+  a {
+    text-decoration: none;
+  }
+
+  .example-card{
+    margin-bottom: 5%;
+    img {
+      height: 150px;
+    }
+
+    p {
+      font-family: "BKoodakBold";
+      text-align: right;
+    }
+
+    p:hover {
+      color: rgb(5, 128, 199);
+    }
+  }
+}
+
+// ============================================================================================
+// Learn
+// ============================================================================================
 
 .learn {
   .main_video {
     h1 a {
       margin-right: 65%;
       font-size: 20px;
+      text-decoration: none;
     }
     .main-news{
       max-width: 100%;
+      p{
+        font-family: "BKoodakBold";
+        text-align: right;
+        padding-top: 2%;
+      }
+      p:hover {
+        color: rgb(5, 128, 199);
+      }
     }
 
     .main-news img {
@@ -96,6 +187,30 @@ h2 {
   position: relative;
 }
 
+// ==========================================================================================
+// sub videos
+// ==========================================================================================
+
+.sub_video{
+  a {
+    text-decoration: none;
+  }
+
+  h1 a{
+    margin-right: 77%;
+    font-size: 20px;
+  }
+
+  p {
+    font-family: "BKoodakBold";
+    text-align: right;
+  }
+
+  p:hover {
+    color: rgb(5, 128, 199);
+  }
+}
+
 .play_icon {
   cursor: pointer;
   img{
@@ -111,31 +226,6 @@ h2 {
   }
 }
 
-.analysis{
-  h1 a{
-    margin-right: 77%;
-    font-size: 20px;
-  }
-
-  a {
-    text-decoration: none;
-  }
-
-  .example-card{
-    margin-bottom: 5%;
-    img {
-      height: 150px;
-    }
-  }
-}
-
-.sub_video{
-  h1 a{
-    margin-right: 77%;
-    font-size: 20px;
-  }
-}
-
 @media screen and (max-width:820px) {
 
   .analysis{
@@ -146,7 +236,7 @@ h2 {
     .example-card{
       margin-bottom: 5%;
       img {
-        height: 200px;
+        height: 150px;
       }
     }
   }
@@ -161,12 +251,21 @@ h2 {
     h1 a {
       margin-right: 60%;
     }
+
+    .main-news img {
+      width: 100%;
+      height: 250px;
+    }
   }
 
   .learn {
     .main_video {
       h1 a {
         margin-right: 55%;
+      }
+      .main-news img {
+        width: 100%;
+        height: 250px;
       }
     }
   }
@@ -178,7 +277,7 @@ h2 {
   .sub_news {
     margin-top: 10%;
     img{
-      height: 200px;
+      height: 150px;
     }
     div{
       padding-bottom: 5%;
@@ -200,6 +299,12 @@ h2 {
     h1 a{
       margin-right: 25%;
     }
+    .example-card{
+      margin-bottom: 5%;
+      img {
+        height: 200px;
+      }
+    }
   }
 
   .sub_video{
@@ -214,7 +319,17 @@ h2 {
     }
     .main-news img {
       width: 100%;
-      height: 250px;
+      height: 200px;
+    }
+  }
+
+  .sub_news {
+    margin-top: 10%;
+    img{
+      height: 200px;
+    }
+    div{
+      padding-bottom: 5%;
     }
   }
 
@@ -225,7 +340,7 @@ h2 {
       }
       .main-news img {
         width: 100%;
-        height: 250px;
+        height: 200px;
       }
     }
   }
