change the subscribe form button

--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -45,23 +45,33 @@
       <div class="col-lg-4 col-md-12 col-sm-12 col-12">
         <h1>از آخرین اخبار و اموزش ها باخبر شوید:</h1>
         <div class="form">
-          <form class="form-inline">
-            <div class="form-group">
-              <input type="email" class="form-control" placeholder="ایمیل خود را وارد نمایید">
-              <button mat-raised-button color="primary">ارسال</button>
+          <form>
+            <div class="row">
+              <div>
+                <input type="email" class="form-control" placeholder="ایمیل خود را وارد نمایید">
+              </div>
+              <div>
+                <button mat-raised-button color="primary">ارسال</button>
+              </div>
             </div>
           </form>
         </div>
         <div class="social_icons">
           <h3>ما را در شبکه های اجتماعی دنبال کنید:</h3>
           <span>
-            <img src="../../../assets/telegram.png" alt="">
+            <a href="">
+              <img src="../../../assets/telegram.png" alt="">
+            </a>
           </span>
           <span>
-            <img src="../../../assets/whatsapp.png" alt="">
+            <a href="">
+              <img src="../../../assets/whatsapp.png" alt="">
+            </a>
           </span>
           <span>
-            <img src="../../../assets/instagram.png" alt="">
+            <a href="https://www.instagram.com/lowrisk98">
+              <img src="../../../assets/instagram.png" alt="">
+            </a>
           </span>
         </div>
       </div>
