--- a/src/app/shared/components/footer/footer.component.scss
+++ b/src/app/shared/components/footer/footer.component.scss
@@ -33,22 +33,28 @@ ul {
 }
 
 .form {
-  margin-left: 30%;
-  width: 100%;
   input{
-    width: 75%;
+    width: 100%;
     height: 37px;
+    float: right;
+  }
+  button {
+    float: right;
+    width: 100%;
   }
 }
 
 .social_icons {
   margin-top: 5%;
   width: 100%;
-  img {
-    float: right;
-    width: 40px;
-    height: 40px;
-    margin-left: 10%;
+  a {
+    cursor: pointer;
+    img {
+      float: right;
+      width: 30px;
+      height: 30px;
+      margin-left: 10%;
+    }
   }
 }
 
@@ -58,11 +64,8 @@ ul {
     .form-group{
       width: 100%;
       input{
-        width: 80%;
+        width: 100%;
         height: 37px;
-      }
-      button {
-        float: right;
       }
     }
   }
